Bug 307934 - regression: In RTL text, can't move caret using arrow keys past point where text wraps. patch from Uri Bernstein <uriber@gmail.com>, r=eyalroz@technion.ac.il, sr=roc.